# agent-expense-management

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  plan.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_cards.py
backend/src/app/: auth.py  config.py  cost_engine.py  database.py  main.py  models.py  policy_engine.py  queries.py  rate_limit.py  rollup.py  schemas.py  schemas_cards.py  seed_pricing.py  stripe_service.py
backend/src/app/routers/: __init__.py  alerts.py  approvals.py  auth.py  cards.py  dashboard.py  events.py  policies.py  programs.py  reports.py  webhooks.py
backend/tests/: conftest.py  test_api_alerts.py  test_api_approvals.py  test_api_auth_keys.py  test_api_cards.py  test_api_events.py  test_api_policies.py  test_api_programs.py  test_auth.py  test_cost_engine.py  test_policy_engine.py  test_queries.py  test_schemas.py
dashboard/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/alerts/: page.tsx
dashboard/src/app/approvals/: page.tsx
dashboard/src/app/cards/: page.tsx
dashboard/src/app/cards/[id]/: page.tsx
dashboard/src/app/explorer/: page.tsx
dashboard/src/app/policies/: page.tsx
dashboard/src/app/programs/: page.tsx
dashboard/src/app/reports/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/components/: data-table.tsx  filter-bar.tsx  sidebar.tsx  spend-chart.tsx  stat-card.tsx
dashboard/src/lib/: api.ts  format.ts  mock-data.ts
examples/: demo.py
sdk/python/: pyproject.toml
sdk/python/src/agentledger/: __init__.py  batcher.py  cards.py  config.py  events.py  instrument.py
sdk/python/src/agentledger/cli/: __init__.py  auth.py  cards.py  main.py  output.py  policies.py
sdk/python/src/agentledger/mcp/: __init__.py  client.py  server.py  tools.py
sdk/python/src/agentledger/wrappers/: __init__.py  anthropic_wrapper.py  openai_wrapper.py
