[project]
name = "agentledger"
version = "0.1.0"
description = "AI expense management SDK - capture LLM token costs without a proxy"
readme = "README.md"
license = "MIT"
authors = [{name = "AgentLedger", email = "sdk@agentledger.dev"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
cli = ["typer>=0.9.0", "rich>=13.0.0", "keyring>=24.0.0"]
mcp = ["mcp>=1.0.0"]
all = ["typer>=0.9.0", "rich>=13.0.0", "mcp>=1.0.0", "keyring>=24.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1.0", "mypy>=1.0"]

[project.scripts]
agentledger = "agentledger.cli.main:app"
agentledger-mcp = "agentledger.mcp.server:main"

[project.urls]
Homepage = "https://agentledger.dev"
Repository = "https://github.com/agentledger/agentledger-python"
Documentation = "https://docs.agentledger.dev"

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
